# SoC-chiplet_verification

./: README.md
chiplet_uvm_sc/: CMakeLists.txt
chiplet_uvm_sc/sc/: lane_txn.hpp
chiplet_uvm_sc/sim/: Makefile
chiplet_uvm_sc/src/: chiplet.hpp  mp_lane.hpp  sc_top.cpp
chiplet_uvm_sc/sv/: uvm_top.sv
chiplet_uvm_sc/sv/pkg/: driver_proxy.sv  env.sv  monitor.sv  seq_lib.sv
io/: readme_io.md  readme_io.txt
io/GPIO/: gpio_axi_lite.sv
io/GPIO_systemC/: gpio_axi_lite.cpp  gpio_axi_lite.h  tb_gpio_axi_lite.cpp
io/UART/: README_UART.md  Uart_core.sv  tb_uart.sv  uart_rx.sv  uart_tx.sv
io/UART_systemC/: Uart_core.h  Uart_rx.cpp  Uart_rx.h  Uart_tx.cpp  Uart_tx.h  tb_uart_systemc.cpp
module/: notes.txt
pmu/: README_PMU.md  readme_pmu.txt
pmu/SystemC design/: design.cpp  pmu_sim  power_monitor.vcd  testbench.cpp
pmu/rtl/: pmu.sv
pmu/testbench/: pmu_tb.sv
processor/: readme_cpu.txt
sim_env/: readme_sim.txt
soc_example/: CMakeLists.txt
soc_example/include/: Counter.h  Memory.h  RandomGen.h  Top.h
soc_example/src/: main.cpp
svm-main/: CMakeLists.txt  README.md  test_notes.txt
svm-main/agents/: axi_dma_agent.hpp  spi_agent.hpp  timer_agent.hpp  uart_agent.hpp
svm-main/chiplet_uvm_sc/: README.md
svm-main/chiplet_uvm_sc/sc/: drivers.hpp
svm-main/chiplet_uvm_sc/scripts/: env.example.sh
svm-main/chiplet_uvm_sc/sv/pkg/: lane_txn.sv  test.sv
svm-main/sim/: main.cpp  tb_top.cpp
svm-main/soc/: manifest.json  soc_top.cpp  soc_top.h
svm-main/soc/ip/: axi_dma.h  spi.h  timer.h  uart.h
svm-main/tests/: dma_burst_mix.dsl.yaml
svm-main/tests/dsl/: quick_sanity.dsl.yaml
svm-main/tools/: dsl2tests.py  run.py
svm-main/vkit/: agent.hpp  base.hpp  env.hpp  factory.hpp  sequencer.cpp  sequencer.hpp
svm-main/vkit/utils/: json.hpp
